correction du logo dans le header pour la version tablette

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -19,6 +19,7 @@
         @include tablette-only {
             width: 42%;
             max-width: 44%;
+            object-fit: contain;
         }
 
         @include desktop-only {
